@@ -199,7 +199,7 @@ describe "mail encoding" do
     describe "#pick_encoding" do
       {
         "latin2" => Encoding::ISO_8859_2,
-        "ISO_8859-1" => "ISO-8859-1",
+        "ISO_8859-1" => Encoding::ISO_8859_1,
         "cp-850" => Encoding::CP850
       }.each do |from, to|
         it "should support #{from}" do
